# film-light-remote

./: .gitignore  CLAUDE.md  LICENSE  README.md  project.yml
FilmLightRemote.xcodeproj/: project.pbxproj
FilmLightRemote/Resources/: Info.plist
FilmLightRemote/Sources/App/: FilmLightRemoteApp.swift
FilmLightRemote/Sources/BLE/: BLEManager.swift  BridgeManager.swift  CueEngine.swift  KeyStorage.swift  MeshConfigManager.swift  MeshCrypto.swift  MetronomeEngine.swift  PaparazziEngine.swift  ProvisioningCrypto.swift  ProvisioningManager.swift  ProvisioningPDU.swift  SidusMeshConfig.swift  SidusMeshManager.swift  SidusProtocols.swift  SoftwareEffectEngine.swift  TempoMap.swift  TimelineEngine.swift
FilmLightRemote/Sources/Cues/: CueEditorView.swift  CueEngine.swift  CueLightEditorView.swift  CueListDetailView.swift  CueModels.swift  CuesView.swift  MoveEditorView.swift  MoveEngine.swift  MoveLightEditorView.swift  MoveListDetailView.swift  TimelineEngine.swift  TimelineView.swift
FilmLightRemote/Sources/Effects/: FaultyBulbEngine.swift
FilmLightRemote/Sources/Groups/: GroupSessionView.swift
FilmLightRemote/Sources/Models/: CueModels.swift  LightState.swift  SavedLight.swift
docs/: PROCEDURE.md  effects-reference.md  protocol.md
esp32-ble-bridge/: CMakeLists.txt  sdkconfig.defaults
esp32-ble-bridge/main/: CMakeLists.txt  ble_mesh.c  ble_mesh.h  effect_engine.c  effect_engine.h  light_registry.c  light_registry.h  main.c  mesh_crypto.c  mesh_crypto.h  sidus_protocol.c  sidus_protocol.h  wifi.c  wifi.h  ws_server.c  ws_server.h
(+17 files in other folders)
